eb_parser/src/snapshots/eb_parser__function__test__parse3.snap
---
source: src/function.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    name: "f",
    params: [
        Param {
            name: "x",
        },
        Param {
            name: "y",
        },
    ],
    body: Node {
        kind: Exprs(
            [],
        ),
        loc: Location(
            14,
        ),
    },
}
