eb_parser/src/snapshots/eb_parser__function__test__parse4.snap
---
source: src/function.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    name: "f",
    params: [
        Param {
            name: "x",
        },
    ],
    body: [
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                11,
            ),
        },
    ],
}
