eb_parser/src/snapshots/eb_parser__function__test__parse5.snap
---
source: src/function.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    name: "f",
    params: [
        Param {
            name: "x",
        },
    ],
    body: Node {
        kind: Exprs(
            [
                Node {
                    kind: Ident(
                        "x",
                    ),
                    loc: Location(
                        11,
                    ),
                },
            ],
        ),
        loc: Location(
            11,
        ),
    },
}
